# vulpus-labs-vst

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  THIRD-PARTY-LICENSES.md
.github/workflows/: build.yml  release.yml
modules/beverley/: Cargo.toml  IMPLEMENTATION.md  README.md
modules/beverley/src/: dsp.rs  lib.rs
xtask/: Cargo.toml
