[package]
name = "beverley"
version = "0.1.0"
edition = "2021"
authors = ["Vulpus Labs"]
description = "Advanced bitcrusher and harmonic distortion CLAP plugin"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# CLAP framework
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default-features = false }

# VST3 wrapper for CLAP plugins
clap-wrapper = "0.1"

# DSP utilities
atomic_float = "1.0"
